# rait-drift

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
config/: calibration_set.json  calibration_set_v1.json  canary_queries.json  defaults.yaml  govuk_pages.yaml
data/processed/: chunks_metadata.json  pinecone_upsert_summary.json
data/raw/apply-council-tax-reduction/: raw.json
data/raw/apply-for-council-housing/: raw.json
data/raw/apply-universal-credit/: raw.json
data/raw/attendance-allowance/: raw.json
data/raw/benefit-cap/: raw.json
data/raw/benefit-overpayments/: raw.json
data/raw/benefits-calculators/: raw.json
data/raw/council-housing/: raw.json
data/raw/council-tax-bands/: raw.json
docs/: Assignment.md  Detect_and_Respond.md  Final_Submission.md  Foundational_Drift_Knowledge.md  GUI_Playground_Guide.md  Metric_Design_Document.md  System_Design_Document.md  Testing_and_Evaluation.md
src/: __init__.py
src/dashboard/: __init__.py  page_chatbot.py  page_monitoring.py  page_system.py  page_tests.py
src/monitoring/: __init__.py  data_collection.py  descriptors.py  judge.py  orchestrator.py
src/production/: __init__.py  generation.py  ingestion.py  logging.py  pipeline.py  retrieval.py
src/utils/: config.py  rate_limiter.py  statistics.py  text_processing.py
tests/: conftest.py
tests/unit/: test_cds.py  test_cds_detailed.py  test_ddi.py  test_ddi_detailed.py  test_fds_detailed.py  test_logging.py  test_statistics.py  test_text_processing.py  test_trci_detailed.py
(+18 files in other folders)
